--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "format:check": "prettier --check **/*.ts",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "package": "ncc build src/index.ts --license licenses.txt",
+    "package:test": "ncc build src/test/index.ts --license licenses.txt --out dist/test",
     "package:watch": "npm run package -- --watch",
     "test": "jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
