--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "format:check": "prettier --check **/*.ts",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "package": "ncc build src/index.ts --license licenses.txt",
-    "package:test": "ncc build src/test/index.ts --license licenses.txt --out dist/test",
+    "package:deployed-task-log": "ncc build src/deployed-task-log/index.ts --license licenses.txt --out dist/deployed-task-log",
     "package:watch": "npm run package -- --watch",
     "test": "jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
@@ -67,7 +67,9 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^6.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
