--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "format:check": "prettier --check **/*.ts",
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "package": "ncc build src/index.ts --license licenses.txt",
-    "package:deployed-task-log": "ncc build src/deployed-task-log/index.ts --license licenses.txt --out dist/deployed-task-log",
+    "package:deployed-task-log": "ncc build src/deployed-task-log/index.ts --license licenses.txt --out deployed-task-log/dist",
     "package:watch": "npm run package -- --watch",
     "test": "jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
