--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "package": "ncc build src/index.ts --license licenses.txt",
     "package:deployed-task-log": "ncc build src/deployed-task-log/index.ts --license licenses.txt --out deployed-task-log/dist",
+    "package:save-log-to-json": "ncc build src/save-log-to-json/index.ts --license licenses.txt --out save-log-to-json/dist",
     "package:watch": "npm run package -- --watch",
     "test": "jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
