--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "package": "ncc build src/index.ts --license licenses.txt",
     "package:deployed-task-log": "ncc build src/deployed-task-log/index.ts --license licenses.txt --out deployed-task-log/dist",
     "package:save-log-to-json": "ncc build src/save-log-to-json/index.ts --license licenses.txt --out save-log-to-json/dist",
+    "package:update-repository-variable": "ncc build src/update-repository-variable/index.ts --license licenses.txt --out update-repository-variable/dist",
     "package:watch": "npm run package -- --watch",
     "test": "jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
@@ -70,9 +71,11 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "@octokit/rest": "^20.0.2"
   },
   "devDependencies": {
+    "@octokit/types": "^12.4.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
