--- a/update-repository-variable/action.yml
+++ b/update-repository-variable/action.yml
@@ -1,6 +1,5 @@
 name: 'Update repository variable'
 description: 'List the task deployed in an environment'
-author: ''
 
 inputs:
   token:
@@ -11,12 +10,12 @@ inputs:
     description: 'Current repository'
     required: true
     default: ''
-  environment:
-    description: 'DXP environment'
-    default: 'INTEGRATION'
   new-value:
-    description: ''
+    description: 'New value for the repository variable'
     required: true
+    default: ''
+  environment:
+    description: 'Environment name'
     default: ''
   prefix:
     description: ''
@@ -24,12 +23,6 @@ inputs:
   variable-name: 
     description: ''
     default: ''
-
-outputs:
-  json-value:
-    description: 'Commit logs'
-  latest-commit-id:
-    description: 'Latest commit hash'
 
 runs:
   using: node20
