--- a/semantic-release/action.yml
+++ b/semantic-release/action.yml
@@ -12,14 +12,20 @@ runs:
   steps:
     - run: |
         curl -H "Authorization: token ${{ inputs.token }}" https://raw.githubusercontent.com/john-christian-melendres/GHCustomActions/main/semantic-release/package.json
+      shell: bash
     - run: |
         curl -H "Authorization: token ${{ inputs.token }}" https://raw.githubusercontent.com/john-christian-melendres/GHCustomActions/main/semantic-release/release.config.js
+      shell: bash
      - run: |
         ls
+      shell: bash
     - name : Install Dependencies
       run: npm i
+      shell: bash
 
     - run: npx semantic-release
       env:
         GITHUB_TOKEN: ${{ inputs.token }}
+      shell: bash
+
     
