--- a/semantic-release/package.json
+++ b/semantic-release/package.json
@@ -10,10 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^9.2.6",
-    "@semantic-release/npm": "^11.0.2",
-    "@semantic-release/release-notes-generator": "^12.1.0",
     "semantic-release": "^23.0.0"
   }
 }
