--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "package:deployed-task-log": "ncc build deployed-task-log/index.ts --license licenses.txt --out deployed-task-log/dist",
     "package:save-log-to-json": "ncc build save-log-to-json/index.ts --license licenses.txt --out save-log-to-json/dist",
     "package:update-repository-variable": "ncc build update-repository-variable/index.ts --license licenses.txt --out update-repository-variable/dist",
+    "package:parse-json": "ncc build parse-json/index.ts --license licenses.txt --out parse-json/dist",
     "package:watch": "npm run package -- --watch",
     "test": "jest",
     "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
