update for testing

--- a/parse-json/action.yml
+++ b/parse-json/action.yml
@@ -8,6 +8,7 @@ inputs:
     default: '{}'
   excluded:
     description: 'comma separated values to'
+    required: false
     default: ''
 
   outputs:
